fix: add flex-wrap in .post-meta div element to allow tag-list line breaks (#115)

--- a/assets/css/components/_post.scss
+++ b/assets/css/components/_post.scss
@@ -5,6 +5,8 @@
 .post-meta > div {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 0.2em;
   font-size: 0.8em;
 
   > .icon {
